Fixed the alignment of the socials

--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ header {
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 0rem 1rem;
+  padding: 1rem 3rem;
   background-color: #6b7a3a;
   color: #f4efe6;
   margin-bottom: 0;
@@ -320,8 +320,9 @@ header {
 
 .information a {
   display: block;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
+  /* padding: 1rem 1rem; */
 }
 
 .google-map {
@@ -340,7 +341,8 @@ header {
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  /* padding: 0 0.75rem; */
 
   /* margin: 0rem 1rem; */
   /* padding: 0rem 1rem; */
@@ -348,7 +350,7 @@ header {
 
 .restaurant-information li {
   margin-top: 0.5rem;
-  padding: 1rem 1rem;
+  padding: 1rem 0rem;
 }
 
 .restaurant-information h2 {
@@ -364,11 +366,9 @@ header {
 
 .media {
   background-color: #6b7a3a;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 3rem;
   padding-bottom: 2rem;
   display: flex;
-  /* margin-top: 1rem; */
-
   gap: 0.75rem;
 }
 
